feat: add Photo Studio and form-filling features
- Add Photo Studio tab with AI-powered photo editing using presets
- Add form-filling assistant for Vinted item creation pages
- Implement drag-and-drop photo transfer to Vinted forms
- Add studio presets management (system + custom)
- Add batch photo editing support
- Remove unused crop feature and react-easy-crop dependency
- Clean up unused backend endpoints (GET /analyses, GET/PUT presets/:id)

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -3,7 +3,7 @@
 OPENAI_API_KEY=
 
 # Get your key at: https://aistudio.google.com/apikey
-GEMINI_API_KEY=
+GOOGLE_GENERATIVE_AI_API_KEY=
 
 # SQLite database path (optional)
 # Default: ./data/vinted-ai.db
