--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -10,13 +10,13 @@
 		"lint": "biome check ."
 	},
 	"dependencies": {
+		"@vinted-ai/shared": "workspace:*",
+		"clsx": "^2.1.1",
+		"dexie": "^4.0.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
-		"zustand": "^5.0.0",
-		"dexie": "^4.0.0",
-		"clsx": "^2.1.1",
 		"tailwind-merge": "^2.6.0",
-		"@vinted-ai/shared": "workspace:*"
+		"zustand": "^5.0.0"
 	},
 	"devDependencies": {
 		"@crxjs/vite-plugin": "^2.0.0-beta.31",
