--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -23,10 +23,11 @@ jobs:
 
       - name: Enable auto-merge for release PR
         if: ${{ steps.release.outputs.pr }}
-        run: gh pr merge --auto --squash "${{ steps.release.outputs.pr }}"
+        run: gh pr merge --auto --squash "$PR_NUMBER"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GH_REPO: ${{ github.repository }}
+          PR_NUMBER: ${{ fromJSON(steps.release.outputs.pr).number }}
 
   build-release:
     needs: release-please
